Name: posix-socket
Version: 0.0.1
Category: System
Stability: experimental
Synopsis: Bindings to POSIX socket API.
Description:
  This package provides bindings to POSIX socket API.

Homepage: https://github.com/mvv/posix-socket
Bug-Reports: https://github.com/mvv/posix-socket/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2011 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.6.0
Build-Type: Simple

Extra-Source-Files: include/posix-socket.macros.h

Source-Repository head
  Type: git
  Location: https://github.com/mvv/posix-socket.git

Library
  Build-Depends:
    base         >= 4 && < 5,
    unix         >= 2.4,
    bytestring   >= 0.9.1.10,
    data-default >= 0.2,
    data-flags   >= 0.0.3,
    data-ip      >= 0.0.1,
    transformers-base
  Hs-Source-Dirs: src
  Include-Dirs: include
  GHC-Options: -Wall
  Exposed-Modules:
    System.Posix.Socket
    System.Posix.Socket.Inet

